Edição no texto

--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
 
       <p>Meu amor,</p>
 
-      <p>Hoje a gente completa 3 anos juntos. 3 anos de risos, de momentos bobos e também de desafios. Sei que estamos passando por um momento meio complicado, entre tempo curto, rotina puxada, faculdade, trabalho... Mas no meio disso tudo, você continua sendo minha paz.</p>
+      <p>Três anos. Caraca… já? Passou voando. E mesmo assim, tem hora que eu fico aqui sem saber como colocar tudo que eu sinto por você em palavras. É muito, sério. Muita coisa que a gente viveu, muita coisa que ainda quero viver contigo. E mesmo agora, com a gente passando por essa fase meio complicada com o tempo apertado, umas discussões/conversas, uns desencontros.. queria que você soubesse que nada disso muda o que eu sinto por você. Nada apaga. O que eu sinto é maior que qualquer coisa.</p>
 
-      <p>Eu nunca vou esquecer do nosso primeiro encontro — naquela pista de skate, jogando cartas como se fosse um filme adolescente. Eu tava tão nervoso, sem saber onde colocar as mãos, porque desde ali, eu já sabia que tinha algo forte por você.</p>
+      <p>Desde aquele primeiro encontro na pista de skate, eu nervoso, sem saber onde enfiar a cara, jogando baralho só pra não ficar te encarando que nem um bobo apaixonado já. Eu já sentia que tinha algo diferente em você, que você era especial e perfeita demais para deixar ir embora. Algo me fazia querer ficar com você. E olha só… fiquei. E estou muitoo feliz por isso.</p>
 
-      <p>E quando te disse aquele primeiro “eu te amo”, lá na sua casa, minutos antes de ir embora... parecia que o tempo parava. Tinha um peso bom, sabe? Como se eu finalmente tivesse dito algo que tava guardado há muito tempo.</p>
+      <p>E como esquecer nosso primeiro beijo? na quadra da escola, todo sem jeito kkkkk. A Bia e o Deivid fizeram aquela aposta: se eu errasse a cesta, teria que te dar um beijo. Você aceitou. Eu errei (mas eu tinha entendido que era se eu acertasse kkkkk) e a gente deu aquele celinho, todo tímido, meio envergonhado, mas… foi muito especial pra mim.</p>
 
-      <p>Teve nossa primeira viagem, lembra? Sorocaba, seu aniversário, o zoológico... e aquele macaco andando “de ré”, que até hoje me faz rir quando lembro. Depois o shopping, o café do Starbucks, os passeios sem rumo com você ao meu lado e o mundo inteiro fazendo sentido.</p>
+      <p>A gente passou por bastante coisa nesse tempo. Lembra daquela viagem com a escola, no parque aquático? A gente ainda tava no comecinho do namoro… e, acabamos brigando por uma besteira. Você saiu com a Bia e o Deivid da corrente de água que ficava em circulo, eu acabei te perdendo de vista, e aí acabei ficando com a galera junto ao Vitão. E daí pronto, a gente passou quase a viagem toda separado. Nem eu fui atrás, nem você. Coisa de orgulho besta, né. Mas eu queria aproveitar esse momento aqui pra te pedir desculpa. De verdade. Eu devia ter ido atrás de você, ter te chamado, ter resolvido ali mesmo. Mas foi um vacilo, imaturidade e enfim, me arrependo muito. Desculpa mesmo.</p>
 
-      <p>Sei que nem sempre é fácil. Mas quero que saiba que você é parte do que me faz ser quem eu sou. E mesmo que às vezes falte tempo, nunca falta amor.</p>
+      <p>Teve também aquele dia na sua casa, aquele “eu te amo” que saiu meio do nada, mas totalmente sincero, depois de um abraço que eu não queria largar. Lembro até hoje da sua cara depois kkkkkk, o silêncio que veio… é engraçado agora, mas também foi real. Senti de verdade.</p>
 
-      <p>Feliz 3 anos. Ainda temos muita história pra escrever.</p>
+      <p>E nossa viagem só nós dois? Inesquecível. O zoológico, o macaco andando de ré (até hoje eu rio disso kkkk), a gente se divertindo feito duas crianças. Depois o shopping e aquele café do Starbucks que nem precisava estar bom, só de estar contigo, o momento já era perfeito.</p>
+
+      <p>Mesmo com as tretas, com os dias difíceis, eu continuo aqui. Amando você do mesmo jeito, até mais. Sei que não sou mais aquele cara nervoso da pista de skate, mas ainda continuo apaixonado, grato e mais certo de que quero continuar vivendo tudo isso com você.</p>
+
+      <p>Obrigado por esses três anos. Por ser minha parceira, minha melhor amiga, meu amorzão.</p>
+
+      <p>Te amo demais, mozão. E vamo junto, sempre. <3</p>
 
       <p>Com todo meu amor,<br>Richard.</p>
 
