--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <p>Meu amor,</p>
 
-      <p>Três anos. Caraca… já? Passou voando. E mesmo assim, tem hora que eu fico aqui sem saber como colocar tudo que eu sinto por você em palavras. É muito, sério. Muita coisa que a gente viveu, muita coisa que ainda quero viver contigo. E mesmo agora, com a gente passando por essa fase meio complicada com o tempo apertado, umas discussões/conversas, uns desencontros.. queria que você soubesse que nada disso muda o que eu sinto por você. Nada apaga. O que eu sinto é maior que qualquer coisa.</p>
+      <p>Três anos. Caraca… já? Passou voando. E mesmo assim, tem hora que eu fico aqui sem saber como colocar tudo que eu sinto por você em palavras. Muita coisa que a gente viveu, muita coisa que ainda quero viver contigo. E mesmo agora, com a gente passando por essa fase meio complicada com o tempo apertado, umas discussões/conversas, uns desencontros.. queria que você soubesse que nada disso muda o que eu sinto por você. Nada apaga. O que eu sinto é maior que qualquer coisa.</p>
 
       <p>Desde aquele primeiro encontro na pista de skate, eu nervoso, sem saber onde enfiar a cara, jogando baralho só pra não ficar te encarando que nem um bobo apaixonado já. Eu já sentia que tinha algo diferente em você, que você era especial e perfeita demais para deixar ir embora. Algo me fazia querer ficar com você. E olha só… fiquei. E estou muitoo feliz por isso.</p>
 
@@ -39,9 +39,9 @@
     </div>
   </div>
 
-  <img id="foto-quadro" src="https://via.placeholder.com/500x350.png?text=Sua+Foto+Aparece+AQUI" alt="Foto nossa juntos" />
+  <img id="foto-quadro" src="/IMG_1055.jpg" alt="Foto nossa juntos" />
 
-  <audio id="musica" src="https://www.bensound.com/bensound-music/bensound-romantic.mp3"></audio>
+  <audio id="musica" src="/acousticbreeze.mp3"></audio>
 
   <script src="script.js"></script>
 </body>
