--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </div>
   </div>
 
-  <img id="foto-quadro" src="/IMG_1055.jpg" alt="Foto nossa juntos" />
+  <img id="foto-quadro" src="IMG_1055.jpg" alt="Foto nossa juntos" />
 
-  <audio id="musica" src="/acousticbreeze.mp3"></audio>
+  <audio id="musica" src="acousticbreeze.mp3"></audio>
 
   <script src="script.js"></script>
 </body>
