--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
       <p>Teve também aquele dia na sua casa, aquele “eu te amo” que saiu meio do nada, mas totalmente sincero, depois de um abraço que eu não queria largar. Lembro até hoje da sua cara depois kkkkkk, o silêncio que veio… é engraçado agora, mas também foi real. Senti de verdade.</p>
 
-      <p>E nossa viagem só nós dois? Inesquecível. O zoológico, o macaco andando de ré (até hoje eu rio disso kkkk), a gente se divertindo feito duas crianças. Depois o shopping e aquele café do Starbucks que nem precisava estar bom, só de estar contigo, o momento já era perfeito.</p>
+      <p>E nossa viagem só nós dois? O zoológico, o macaco andando de ré (até hoje eu rio disso kkkk), a gente se divertindo feito duas crianças. Depois o shopping e aquele café do Starbucks que nem precisava estar bom, só de estar contigo, o momento já era perfeito.</p>
 
-      <p>Mesmo com as tretas, com os dias difíceis, eu continuo aqui. Amando você do mesmo jeito, até mais. Sei que não sou mais aquele cara nervoso da pista de skate, mas ainda continuo apaixonado, grato e mais certo de que quero continuar vivendo tudo isso com você.</p>
+      <p>Mesmo com as discussões, com os dias difíceis, eu continuo aqui. Amando você do mesmo jeito, até mais. Sei que não sou mais aquele cara que você conheceu, da pista de skate kkkkk, mas ainda continuo apaixonado, grato e mais certo de que quero continuar vivendo tudo isso com você.</p>
 
       <p>Obrigado por esses três anos. Por ser minha parceira, minha melhor amiga, meu amorzão.</p>
 
-      <p>Te amo demais, mozão. E vamo junto, sempre. <3</p>
+      <p>Te amo demais, mozão. <3</p>
 
       <p>Com todo meu amor,<br>Richard.</p>
 
